--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,11 @@ dependencies {
     // unit test
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.hamcrest:java-hamcrest:2.0.0.0'
+    //instrumented test
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
 
     // event bus
     implementation 'org.greenrobot:eventbus:3.1.1'
